Security & Access Rights Auditor/main/default/objects/Test_Object__c/fields/Test_Field2__c.field-meta.xml
<CustomField>
    <fullName>Test_Field2__c</fullName>
    <description>adgadg</description>
    <inlineHelpText>adfggfad</inlineHelpText>
    <label>Test Field2</label>
    <length>123</length>
    <type>Text</type>
</CustomField>