Security & Access Rights Auditor/main/default/objects/Test_Object__c/fields/Test_Field4__c.field-meta.xml
<CustomField>
    <fullName>Test_Field4__c</fullName>
    <defaultValue>false</defaultValue>
    <description>adgag</description>
    <inlineHelpText>adgdf</inlineHelpText>
    <label>Test Field4</label>
    <type>Checkbox</type>
</CustomField>