Security & Access Rights Auditor/main/default/objects/Test_Object__c/fields/Test_Field6__c.field-meta.xml
<CustomField>
    <fullName>Test_Field6__c</fullName>
    <description>afdadf</description>
    <inlineHelpText>adgafdg</inlineHelpText>
    <label>Test Field6</label>
    <type>Date</type>
</CustomField>