Security & Access Rights Auditor/main/default/objects/Test_Object__c/recordTypes/Test_Record_Type1.recordType-meta.xml
<RecordType>
    <fullName>Test_Record_Type1</fullName>
    <active>true</active>
    <description>Test</description>
    <label>Test Record Type1</label>
</RecordType>