Security & Access Rights Auditor/main/default/objects/Test_Object__c/recordTypes/Test_Record_Type2_CEO.recordType-meta.xml
<RecordType>
    <fullName>Test_Record_Type2_CEO</fullName>
    <active>true</active>
    <description>Cloned from Test_Record_Type2 for CEO</description>
    <label>Test Record Type2 - CEO</label>
</RecordType>