Security & Access Rights Auditor/main/default/objects/Test_Object__c/recordTypes/Test_Record_Type3_CEO.recordType-meta.xml
<RecordType>
    <fullName>Test_Record_Type3_CEO</fullName>
    <active>true</active>
    <description>Cloned from Test_Record_Type3 for CEO</description>
    <label>Test Record Type3 - CEO</label>
</RecordType>